# kosongg

./: .gitignore  LICENSE  README.md  main.py  recipes.py  requirements.txt
cmake/imgui/: CMakeLists.txt
cpp/: Component.cpp  Engine.cpp  GLUtil.cpp  UtfConv.c  Utils.mm  _GLUtil.cpp  _UtfConv.c  engine.cpp  glutil.cpp  imconfig.h  imcontrol.cpp  main.cpp
cpp/ifd/: DirectoryIterator.cpp  DirectoryIterator.hpp  ImFileDialog.cpp  ImFileDialog.hpp  ImFileDialogIconInfo.cpp  ImFileDialogIconInfo.hpp  ImFileDialog_linux.cpp  ImFileDialog_linux.hpp  ImFileDialog_opengl.hpp  ImFileDialog_osx.hpp  ImFileDialog_osx.mm  ImFileDialog_win32.cpp  ImFileDialog_win32.hpp  NOTES.md
cpp/imgui/: CMakeLists.txt
cpp/imgui/imkosongg/: Component.cpp  ImKosongg.cpp  ImKosongg.hpp
cpp/imkosongg/: ImKosongg.hpp  _ImKosongg.cpp
cpp/kosongg/: Component.h  Engine.h  GLUtil.h  GetExeDirectory.h  HsCppMacros.hpp  HsCppProgress.hpp  INIReader.h  UtfConv.h  _GLUtil.h  getexedirectory.hpp  imcontrol.hpp  m_ini.hpp  win32dirent.h
cpp/watched/: imcontrol.cpp  imcontrol.hpp
fonts/: SegoeUI-LICENSE.md
templates/: .env.jinja  CMakeLists.txt.jinja  Globals.hpp.jinja  Info.plist.in.jinja  MainApp.cpp.jinja  MainApp.hpp.jinja  MainWidget.cpp.jinja  _MainWidget.cpp.jinja  _MainWidget.hpp.jinja  c_cpp_properties.json.jinja  globals.hpp.jinja  kosongg.ini.jinja  launch.json.jinja  mainapp.cpp.jinja  mainapp.hpp.jinja  mainwidget.cpp.jinja  mainwidget.hpp.jinja  run.py.jinja
